--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SF",
+  "name": "NMS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "alixyMizuki",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
